Fixes scroll-slide height bug that was causing them to collapse on wide screens in firefox.

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -379,6 +379,7 @@ THE SHOT CHART AND TOOLTIP
   text-align: center;
   display: table;
   width: 100%;
+  height: 100vh;
   .slide-content-container {
     display: table-cell;
     vertical-align: middle;
